--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2'
 services:
-  sportingglobe-monitoring:
+  statusok:
     build: .
-    container_name: sportingglobe-monitoring
+    container_name: statusok
     tty: true
     volumes:
       - ./config:/config
@@ -10,10 +10,11 @@ services:
       - influxdb
   influxdb:
     image: influxdb:latest
+    container_name: influxdb
     volumes: 
       - influxdb-storage:/var/lib/influxdb
     environment:
-      - INFLUXDB_DB="sportingglobe-monitoring"
+      - INFLUXDB_DB="statusok"
       - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
       - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
     ports:
